[project]
name = "imsa"
version = "0.1.0"
description = "Is My Server Alive? Telegram Bot"
authors = [
    {name = "KernelKrise"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
